STEP 5/OPA Usecases/Deny Retain Reclaim Policy/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockRetain
metadata:
  name: blockretain
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["PersistentVolume"]
