STEP 5/OPA Usecases/Deny Retain Reclaim Policy/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sblockretain
  annotations:
    description: Disallows Retain Policy
spec:
  crd:
    spec:
      names:
        kind: K8sBlockRetain
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblockretain
        violation[{"msg": msg}] {
         #input.review.object.kind == "PersistentVolume"                  #Checks if it is Persistent Volume
         #input.review.object.spec.persistentVolumeReclaimPolicy == "Retain"   #Checks if the Reclaim Policy is Retain
         #msg := "Retain Policy should not be used"                       #Violation Message
        }
